--- a/public/styles.css
+++ b/public/styles.css
@@ -12,6 +12,12 @@ nav {
     background-color: #8762D9;
 }
 
+.privacy-policy-container {
+    background-color: #1a1a1a;
+    color: white;
+    padding: 10%;
+}
+
 .page-container {
     display: flex;
     flex-direction: column;
@@ -467,7 +473,7 @@ nav {
     display: flex;
     /* width: 100%; */
     background-color: #1A1A1A;
-    height: 100vh;
+    height: 100%;
     flex-direction: column;
 }
 
