--- a/public/styles.css
+++ b/public/styles.css
@@ -474,6 +474,7 @@ nav {
     /* width: 100%; */
     background-color: #1A1A1A;
     height: 100%;
+    min-height: 100vh;
     flex-direction: column;
 }
 
